--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,8 +1,8 @@
 doctrine:
     dbal:
         # configure these for your database server
-        driver: 'pdo_mysql'
-        server_version: '5.7'
+        driver: 'pdo_pgsql'
+        server_version: '9.5'
         charset: utf8mb4
         default_table_options:
             charset: utf8mb4
