--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=1973a586e3118bc455dd437384928209
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=pdo_pgsql://homestead:secret@127.0.0.1:5432/sygitech
+DATABASE_URL=mysql://homestead:secret@192.168.10.10:3306/sygtechdb
 
 
 ###< doctrine/doctrine-bundle ###
