--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,13 @@
         "symfony/translation": "4.3.*",
         "symfony/twig-bundle": "4.3.*",
         "symfony/validator": "4.3.*",
-        "symfony/web-server-bundle": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
-        "fzaninotto/faker": "^1.8"
+        "fzaninotto/faker": "^1.8",
+        "symfony/maker-bundle": "^1.13",
+        "symfony/web-server-bundle": "4.3.*"
     },
     "config": {
         "preferred-install": {
