--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 index:
    path: /
-   controller: App\Controller\IndexController::luckyNumber
+   controller: App\Controller\SygtechController::index
